libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/use-struct-path.jsonc
//@ run: fail
//@ description: path values that aren't identifiers should fail
[
  "::kernel::special_form::use",
  "::core::math",
  {
    "#struct": {
      "add": "::core::math::sub"
      //~^ ERROR expected `_` or a simple identifier as the alias
    }
  },
  { "#literal": 1 }
]
